--- a/index.html
+++ b/index.html
@@ -470,10 +470,10 @@
 
 
         </div>
-            <div class="show-map">
+<!--             <div class="show-map">
               <iframe width="100%" height="300" frameborder="0" style="border:0" src="./BusinessCard_files/place.html">
               </iframe>
-            </div>
+            </div> -->
        
         <div class="desktop-socials">
           
@@ -483,6 +483,8 @@
 			</div>
 			<div class="social-icons">
 				<a href="http://facebook.com/" target="_blank" class="">
+					<img src="./BusinessCard_files/sthng8decuiqpsbclv6d.webp" alt="Sthng8decuiqpsbclv6d">
+
 					<span class="fa fa-facebook"></span>
 				</a>
 
