--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 				<a href="http://facebook.com/" target="_blank" class="">
 					<img src="./BusinessCard_files/sthng8decuiqpsbclv6d.webp" alt="Sthng8decuiqpsbclv6d">
 
-					<span class="fa fa-facebook"></span>
+<!-- 					<span class="fa fa-facebook"></span> -->
 				</a>
 
 				<a href="http://twitter.com/" target="_blank" class="">
