--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 			</div>
 			<div class="social-icons">
 				<a href="http://facebook.com/" target="_blank" class="">
-					<img src="./BusinessCard_files/facebook-logo.png">
+					<img type="image/x-icon" src="./BusinessCard_files/facebook-logo.png">
 
 <!-- 					<span class="fa fa-facebook"></span> -->
 				</a>
