--- a/index.html
+++ b/index.html
@@ -483,29 +483,33 @@
 			</div>
 			<div class="social-icons">
 				<a href="http://facebook.com/" target="_blank" class="">
-					<img  src="./BusinessCard_files/facebook-logo.png">
-
+					<img  src="./BusinessCard_files/facebook.png">
 <!-- 					<span class="fa fa-facebook"></span> -->
 				</a>
 
 				<a href="http://twitter.com/" target="_blank" class="">
-					<span class="fa fa-twitter"></span>
+<!-- 					<span class="fa fa-twitter"></span> -->
+					<img  src="./BusinessCard_files/twitter.png">
 				</a>
 
 				<a href="http://googleplus.com/" target="_blank" class="">
-					<span class="fa fa-google-plus"></span>
+<!-- 					<span class="fa fa-google-plus"></span> -->
+					<img  src="./BusinessCard_files/google-plus.png">
 				</a>
 
 				<a href="http://linkedin.com/" target="_blank" class="">
-					<span class="fa fa-linkedin"></span>
+<!-- 					<span class="fa fa-linkedin"></span> -->
+					<img  src="./BusinessCard_files/linkedin.png">
 				</a>	
 
 				<a href="http://instagram.com/" target="_blank" class="">
-					<span class="fa fa-instagram"></span>
+<!-- 					<span class="fa fa-instagram"></span> -->
+					<img  src="./BusinessCard_files/instagram.png">
 				</a>
 
 				<a href="http://youtubechannel.com/" target="_blank" class="">
-					<span class="fa fa-youtube"></span>
+<!-- 					<span class="fa fa-youtube"></span> -->
+					<img  src="./BusinessCard_files/youtube.png">
 				</a>
 			</div>
 		</div>		
