--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
 				<a href="http://twitter.com/" target="_blank" class="">
 <!-- 					<span class="fa fa-twitter"></span> -->
-					<img  src="./BusinessCard_files/twitter.png">
+					<img  src="./BusinessCard_files/twitter.svg" height="20%" width="20%">
 				</a>
 
 				<a href="http://googleplus.com/" target="_blank" class="">
