--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <link rel="apple-touch-icon" sizes="144x144" href="https://res.cloudinary.com/dmabeivkl/image/upload/w_200,fl_lossy,f_auto/v1564905357/profile-image/kkgh6yn1yaza291oyhcw.jpg">
     <link rel="apple-touch-icon" sizes="152x152" href="https://res.cloudinary.com/dmabeivkl/image/upload/w_200,fl_lossy,f_auto/v1564905357/profile-image/kkgh6yn1yaza291oyhcw.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dmabeivkl/image/upload/w_200,fl_lossy,f_auto/v1564905357/profile-image/kkgh6yn1yaza291oyhcw.jpg">
-    <link rel="icon" type="image/png" sizes="192x192" href="https://res.cloudinary.com/dmabeivkl/image/upload/w_200,fl_lossy,f_auto/v1564905357/profile-image/kkgh6yn1yaza291oyhcw.jpg">
+<!--     <link rel="icon" type="image/png" sizes="192x192" href="https://res.cloudinary.com/dmabeivkl/image/upload/w_200,fl_lossy,f_auto/v1564905357/profile-image/kkgh6yn1yaza291oyhcw.jpg">
     <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dmabeivkl/image/upload/w_200,fl_lossy,f_auto/v1564905357/profile-image/kkgh6yn1yaza291oyhcw.jpg">
     <link rel="icon" type="image/png" sizes="96x96" href="https://res.cloudinary.com/dmabeivkl/image/upload/w_200,fl_lossy,f_auto/v1564905357/profile-image/kkgh6yn1yaza291oyhcw.jpg">    
     <link rel="shortcut icon" type="image/x-icon" href="https://d2105m540nvnaz.cloudfront.net/assets/favicon-16x16.png">
-
+ -->
     
 <!-- THE CARD META TAGS -->    
 
