--- a/index.html
+++ b/index.html
@@ -215,10 +215,14 @@
 	<div>
 			<div class="featured-image ">
 <!-- 			<a class="swipebox" rel="gallery-1" href="./BusinessCard_files/sthng8decuiqpsbclv6d.webp"><img src="./BusinessCard_files/sthng8decuiqpsbclv6d.webp" alt="Sthng8decuiqpsbclv6d"></a> -->
+		        <a class="swipebox" rel="gallery-1" href="./BusinessCard_files/crrlwhmovhineiarvnzg.webp">
+				<img src="./BusinessCard_files/crrlwhmovhineiarvnzg.webp" alt="Crrlwhmovhineiarvnzg"></a>
 	</div>	
 
 	<div class="profile-image">
 <!--        <img src="./BusinessCard_files/kkgh6yn1yaza291oyhcw.webp" alt="Kkgh6yn1yaza291oyhcw"> -->
+		<img src="./BusinessCard_files/friizwlugbny12o9bfrl.webp" alt="friizwlugbny12o9bfrl"> 
+		
     </div>
        
         <div class="title shrink">
