--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	</div>	
 
 
-	<div id="action-wrap">
+<!-- 	<div id="action-wrap">
 
 		    <div class="vcf vcard-action-item">
 		    	<a onclick="statEventWasMade(61727, 10);" data-turbolinks="false" href="https://dl.dibiz.com/someemail/vcard">
@@ -201,7 +201,7 @@
 	
 
 	
-</div>
+</div> -->
 
 <div id="content">
   <div class="vcard-container loaded" style="height: 987.611px;">
