--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
     </div>
        
         <div class="title shrink">
-            <h1>Name</h1>
-            <div class="description">Job description</div>
+            <h1>KARKHANA</h1>
+            <div class="description">A Complete Post Production</div>
             <div class="share-inline">
 	                <span title="Mobile">
 	                	<a href="tel:222222" onclick="statEventWasMade(61727, 8);window.location.href=&#39;tel:222222&#39;;return false;" target="_blank">	                	
