--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <div class="about vcard-collapse-item">
         <span class="accordion-toggle vcard-collapse-item__trigger" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3" data-target="#collapseOne1-copy" aria-expanded="true">
             <span class="ico-wrap"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title></title><g class="nc-icon-wrapper"><path fill="currentColor" d="M33.261,41.186l-0.623,2.549C28.319,45.436,27.057,46,24.283,46c-2.266,0-4.026-0.552-5.281-1.657 c-1.256-1.104-1.884-2.506-1.884-4.206c0-1.5,0.241-2.885,0.595-4.361l2.338-8.27c0.448-1.701,1.365-5.178,0.086-6.4 c-1.265-1.205-4.212-0.468-5.992,0.198l0.624-2.549c2.504-1.019,5.665-2.266,8.364-2.266c4.06,0,7.031,2.03,7.031,5.862 c0,1-0.185,3.026-0.595,4.39l-2.329,8.241c-0.291,1.014-0.738,3.143-0.738,4.191c0,1.095,0.244,1.841,0.734,2.237 C28.566,42.487,31.713,41.915,33.261,41.186z"></path> <circle fill="currentColor" data-color="color-2" cx="28" cy="7" r="5"></circle></g></svg></span>
-            <span class="acc-label">About</span>
+            <span class="acc-label">KARKHANA - A Complete Post Production</span>
         </span>
         <div id="collapseOne1-copy" class="panel-collapse vcard-collapse-item__contentOuter collapse in" aria-expanded="true" style="">
             <div class="vcard-collapse-item__contentInner">
@@ -426,7 +426,7 @@
             </div>
         </div>
     </div>
-
+<!-- 
     <div class="gallery vcard-collapse-item">
         <span class="accordion-toggle collapsed vcard-collapse-item__trigger" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3" data-target="#collapseTwo1-copy" aria-expanded="false">
              <span class="ico-wrap"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><title></title><g class="nc-icon-wrapper"><path fill="currentColor" d="M30.895,27.553l-9-18c-0.156-0.312-0.464-0.521-0.812-0.55c-0.35-0.022-0.686,0.126-0.891,0.409 l-7.384,10.153l-4.183-3.347c-0.231-0.185-0.533-0.255-0.822-0.199c-0.29,0.059-0.539,0.242-0.681,0.502l-6,11 c-0.169,0.31-0.162,0.686,0.018,0.989C1.32,28.813,1.647,29,2,29h28c0.347,0,0.668-0.18,0.851-0.475S31.049,27.862,30.895,27.553z"></path> <circle fill="currentColor" data-color="color-2" cx="10" cy="7" r="4"></circle></g></svg></span>
@@ -445,9 +445,9 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="videos vcard-collapse-item">
+<!--     <div class="videos vcard-collapse-item">
         <span class="accordion-toggle collapsed vcard-collapse-item__trigger" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3" data-target="#collapseThree1-copy" aria-expanded="false">
              <span class="ico-wrap"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title></title><g class="nc-icon-wrapper"><path fill="currentColor" d="M31,9H3c-1.105,0-2,0.895-2,2v26c0,1.105,0.895,2,2,2h28c1.105,0,2-0.895,2-2V11C33,9.895,32.105,9,31,9z"></path> <path fill="currentColor" data-color="color-2" d="M46.55,13.165c-0.28-0.185-0.635-0.218-0.944-0.084L35,17.626v12.747l10.606,4.545 C45.732,34.974,45.866,35,46,35c0.193,0,0.385-0.056,0.55-0.165C46.831,34.649,47,34.336,47,34V14 C47,13.664,46.831,13.351,46.55,13.165z"></path></g></svg></span>
              <span class="acc-label">Videos</span>
@@ -467,7 +467,7 @@
             </div>
         </div>
     </div>
-
+ -->
     
 
 </div>
