--- a/index.html
+++ b/index.html
@@ -418,11 +418,11 @@
     <div class="about vcard-collapse-item">
         <span class="accordion-toggle vcard-collapse-item__trigger" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3" data-target="#collapseOne1-copy" aria-expanded="true">
             <span class="ico-wrap"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title></title><g class="nc-icon-wrapper"><path fill="currentColor" d="M33.261,41.186l-0.623,2.549C28.319,45.436,27.057,46,24.283,46c-2.266,0-4.026-0.552-5.281-1.657 c-1.256-1.104-1.884-2.506-1.884-4.206c0-1.5,0.241-2.885,0.595-4.361l2.338-8.27c0.448-1.701,1.365-5.178,0.086-6.4 c-1.265-1.205-4.212-0.468-5.992,0.198l0.624-2.549c2.504-1.019,5.665-2.266,8.364-2.266c4.06,0,7.031,2.03,7.031,5.862 c0,1-0.185,3.026-0.595,4.39l-2.329,8.241c-0.291,1.014-0.738,3.143-0.738,4.191c0,1.095,0.244,1.841,0.734,2.237 C28.566,42.487,31.713,41.915,33.261,41.186z"></path> <circle fill="currentColor" data-color="color-2" cx="28" cy="7" r="5"></circle></g></svg></span>
-            <span class="acc-label">KARKHANA - A Complete Post Production</span>
+            <span class="acc-label">About</span>
         </span>
         <div id="collapseOne1-copy" class="panel-collapse vcard-collapse-item__contentOuter collapse in" aria-expanded="true" style="">
             <div class="vcard-collapse-item__contentInner">
-            	about
+            	KARKHANA - A Complete Post Production
             </div>
         </div>
     </div>
