--- a/index.html
+++ b/index.html
@@ -486,34 +486,34 @@
 				Follow us
 			</div>
 			<div class="social-icons">
-				<a href="http://facebook.com/" target="_blank" class="">
-					<img  src="./BusinessCard_files/facebook.png">
+				<a href="http://www.facebook.com/" target="_blank" class="">
+					<img  src="./BusinessCard_files/facebook.svg" height="10%" width="10%">
 <!-- 					<span class="fa fa-facebook"></span> -->
 				</a>
 
-				<a href="http://twitter.com/" target="_blank" class="">
+				<a href="http://www.twitter.com/" target="_blank" class="">
 <!-- 					<span class="fa fa-twitter"></span> -->
 					<img  src="./BusinessCard_files/twitter.svg" height="10%" width="10%">
 				</a>
 
-				<a href="http://googleplus.com/" target="_blank" class="">
+				<a href="http://www.googleplus.com/" target="_blank" class="">
 <!-- 					<span class="fa fa-google-plus"></span> -->
-					<img  src="./BusinessCard_files/google-plus.png">
+					<img  src="./BusinessCard_files/google-plus.svg" height="10%" width="10%">
 				</a>
 
-				<a href="http://linkedin.com/" target="_blank" class="">
+				<a href="http://www.linkedin.com/" target="_blank" class="">
 <!-- 					<span class="fa fa-linkedin"></span> -->
-					<img  src="./BusinessCard_files/linkedin.png">
+					<img  src="./BusinessCard_files/linkedin.svg" height="10%" width="10%">
 				</a>	
 
-				<a href="http://instagram.com/" target="_blank" class="">
+				<a href="http://www.instagram.com/" target="_blank" class="">
 <!-- 					<span class="fa fa-instagram"></span> -->
-					<img  src="./BusinessCard_files/instagram.png">
+					<img  src="./BusinessCard_files/instagram.svg" height="10%" width="10%">
 				</a>
 
-				<a href="http://youtubechannel.com/" target="_blank" class="">
+				<a href="http://www.youtube.com/" target="_blank" class="">
 <!-- 					<span class="fa fa-youtube"></span> -->
-					<img  src="./BusinessCard_files/youtube.png">
+					<img  src="./BusinessCard_files/youtube.svg" height="10%" width="10%">
 				</a>
 			</div>
 		</div>		
