--- a/index.html
+++ b/index.html
@@ -496,10 +496,10 @@
 					<img  src="./BusinessCard_files/twitter.svg" height="10%" width="10%">
 				</a>
 
-				<a href="http://www.googleplus.com/" target="_blank" class="">
+<!-- 				<a href="http://www.googleplus.com/" target="_blank" class="">
 <!-- 					<span class="fa fa-google-plus"></span> -->
 					<img  src="./BusinessCard_files/google-plus.svg" height="10%" width="10%">
-				</a>
+				</a> -->
 
 				<a href="http://www.linkedin.com/" target="_blank" class="">
 <!-- 					<span class="fa fa-linkedin"></span> -->
