--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 				</a>
 
 <!-- 				<a href="http://www.googleplus.com/" target="_blank" class="">
-<!-- 					<span class="fa fa-google-plus"></span> -->
+				<span class="fa fa-google-plus"></span>
 					<img  src="./BusinessCard_files/google-plus.svg" height="10%" width="10%">
 				</a> -->
 
