--- a/index.html
+++ b/index.html
@@ -253,16 +253,16 @@
 	                		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title></title><g class="nc-icon-wrapper"> <path d="M35.387,43.93c-5.026,1.921-20.362,5.061-28.681-4.511C-1.352,30.147,2.146,16.113,8.18,9.1,13.632,2.755,24.9-.176,34.781,3.833S46.3,17.115,45.958,22.462s-1.993,11.11-7.365,11.528-6.239-4.594-6.585-7.017.953-12.781.953-12.781C21.177,10.6,17.018,16.865,15.718,20.707s-1.733,9.857,3.119,12.447S30.1,32.4,32.008,26.972" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="5" data-cap="butt" stroke-linecap="butt"></path> </g></svg>	                	
 		            	</a>
 		            </span>
-                <span title="Add to contacts">
+<!--                 <span title="Add to contacts">
                 	<a onclick="statEventWasMade(61727, 10);" data-turbolinks="false" href="https://dl.dibiz.com/someemail/vcard">
                 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title></title><g class="nc-icon-wrapper"><path fill="currentColor" d="M9,12c2.761,0,5-3.239,5-6V5c0-2.761-2.239-5-5-5S4,2.239,4,5v1C4,8.761,6.239,12,9,12z"></path> <path fill="currentColor" d="M16.257,15.315c-0.093-0.043-0.184-0.088-0.283-0.121C14.329,14.638,11.824,14,9,14 s-5.329,0.638-6.974,1.193C0.81,15.604,0,16.749,0,18.032V22h14.349C14.127,21.374,14,20.702,14,20 C14,18.103,14.883,16.414,16.257,15.315z"></path> <polygon fill="currentColor" data-color="color-2" points="21,16 19,16 19,19 16,19 16,21 19,21 19,24 21,24 21,21 24,21 24,19 21,19 "></polygon></g></svg>                	
-</a>                </span>
+</a>                </span> -->
 				
-				<span title="Share">
+<!-- 				<span title="Share">
 					<span class="trigger-share-modal">
                 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title></title><g class="nc-icon-wrapper"><path fill="currentColor" d="M19,8c2.2,0,4-1.8,4-4s-1.8-4-4-4s-4,1.8-4,4c0,0.4,0.1,0.7,0.2,1L7.9,9.2C7.1,8.5,6.1,8,5,8 c-2.2,0-4,1.8-4,4s1.8,4,4,4c1.1,0,2.1-0.5,2.9-1.2l7.3,4.2c-0.1,0.3-0.2,0.7-0.2,1c0,2.2,1.8,4,4,4s4-1.8,4-4s-1.8-4-4-4 c-1.1,0-2.1,0.5-2.9,1.2L8.8,13C8.9,12.7,9,12.4,9,12s-0.1-0.7-0.2-1l7.3-4.2C16.9,7.5,17.9,8,19,8z"></path></g></svg>
                 	</span>
-               	</span>
+               	</span> -->
             </div>
         </div>
     </div>
