--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   <title>Karkhana - Digital Business Card</title>
-	<link rel="shortcut icon" type="image/png" href="./assets/images/favicon-122x122.png">
+	<link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon-122x122.png">
   <link rel="stylesheet" href="./assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="./assets/tether/tether.min.css">
   <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
