--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   <link rel="stylesheet" href="./assets/theme/css/style.css">
   <link rel="stylesheet" href="./assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <meta property="og:image" content="./assets/images/favicon-122x122.png">
+  <meta property="og:image:height" content="200">
+  <meta property="og:image:width" content="200">
+	
+	
   
 </head>
 <body>
